--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                             <span>#clone coding</span>
                                         </li>
                                     </ul>
-                                    <p>모바일과 테블릿을 중점으로 제작한 <span>반응형</span> 작업입니다</p>
+                                    <p>탭을 활용한 슬라이드가 되도록 작업하였습니다</p>
                                     <ul class="link">
                                         <li class="title__page">
                                             <a href="https://dbckgh8010.github.io/shinsegae-lnb" target="_blank" class="site">
